fixes contact info alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -141,13 +141,14 @@ body {
 }
 
 .contact-wrapper{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-rows: 0.1fr 0.9fr;
 }
 
 .contact-section-title{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-transform: uppercase;
   font-weight: bold;
   color:white;
@@ -156,9 +157,9 @@ body {
 
 .contact-info{
   display: flex;
-  gap: 10px;
+  justify-content: center;
   color: white;
-  
+  text-align: center;
 }
 
 
@@ -169,8 +170,6 @@ body {
 .right-section {
   display: grid;
   grid-template-rows: repeat(4, auto);
-  /* grid-template-rows: repeat(4, 1fr); */
-  /* background-color: rgb(249, 237, 237); */
   padding: 100px 50px 100px 100px;
 }
 
@@ -185,20 +184,16 @@ body {
 
 .about-me {
   display: grid;
-  /* background: red; */
   grid-template-rows: 0.2fr auto;
 }
 
 .education {
-  /* background: rgb(205, 198, 148); */
 }
 
 .experience {
-  /* background: rgb(148, 157, 205); */
 }
 
 .certificates {
-  /* background: rgb(205, 148, 197); */
 }
 
 .experience-wrapper {
@@ -209,7 +204,6 @@ body {
 }
 
 .company-name{
-  /* margin:0px; */
   font-weight: bold;
 }
 
